--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "buefy": "^0.8.12",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
@@ -18,6 +19,7 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "json-server-auth": "^1.2.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
